--- a/SelfHosted/res/index.html
+++ b/SelfHosted/res/index.html
@@ -76,7 +76,14 @@
                     <h1>Hello, world!</h1>
                     <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
                     <p><img src="img/a.aaa-LIKE-A-BOSS-LIKE-A-BOSS.jpg" /></p>
-                    <p><input type="file" /></p>
+                    <p><input type="file" id="file_upload" /></p>
+                    <form action="api/fileupload" enctype="multipart/form-data" method="post">
+                        What is your name?
+                        <input name="submitter" size="40" type="text" /><br />
+                        What files are you uploading?
+                        <input name="data" type="file" multiple="multiple" /><br />
+                        <input type="submit" />
+                    </form>
                     <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
                 </div>
                 <div class="row-fluid">
